Added battery config in settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,162 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ELOC Control Panel</string>
+    <string name="app_version">App Version</string>
+    <string name="applying_changes">Applying changes…</string>
+    <string name="arm_during_recording">Arm During Recording</string>
+    <string name="average_interval">Average Interval</string>
+    <string name="average_samples">Average Samples</string>
     <string name="battery">Battery</string>
+    <string name="battery_average_interval">Battery Average Interval (Seconds)</string>
+    <string name="battery_average_samples">Battery Average Samples</string>
+    <string name="battery_type">Battery Type</string>
+    <string name="battery_update_interval">Battery Update Interval (Seconds)</string>
+    <string name="battery_volt">Battery Volt</string>
     <string name="bluetooth_during_recording">Bluetooth During Recording</string>
+    <string name="bluetooth_timeout_off_seconds">Bluetooth Timeout Off Seconds</string>
     <string name="camera_permission_rationale">%s needs permission to use the camera to take a photo.\nDo you want to grant the permission?</string>
+    <string name="cancel">Cancel</string>
+    <string name="channel">Channel</string>
+    <string name="check_internet_connection">Check internet connection!</string>
+    <string name="checking_eloc_status_to_upload">Checking ELOC status to upload…</string>
+    <string name="clear">Clear</string>
+    <string name="command_line">Command Line</string>
+    <string name="command_required">You must enter a command to send!</string>
+    <string name="command_sent_successfully">Command sent successfully</string>
     <string name="communication">Communication</string>
+    <string name="confirm">Confirm</string>
+    <string name="confirm_clear_log">Are you sure you want to clear the log?</string>
+    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
     <string name="connected">Connected</string>
     <string name="connecting">Connecting…</string>
+    <string name="cpu">CPU</string>
     <string name="detecting_since">Detecting Since</string>
     <string name="detector_settings">Detector Settings</string>
     <string name="device_address_required">Device address is required!</string>
     <string name="device_name_required">Device name is required!</string>
+    <string name="device_offline">Failed to connect to server.\n\nPlease check your internet connection and make sure it is active.</string>
+    <string name="device_settings_not_available">Device settings are not available while it is recording or detecting.</string>
     <string name="disconnected_swipe_to_reconnect">Disconnected\n\nSwipe down to reconnect</string>
+    <string name="editor">Editor</string>
+    <string name="eloc_status_uploaded">ELOC status was successfully uploaded</string>
     <string name="eloc_user">USER: %s</string>
+    <string name="enable_at_start">Enable At Start</string>
+    <string name="enable_during_recording">Enable During Recording</string>
+    <string name="enable_light_sleep">Enable Light Sleep</string>
+    <string name="enable_on_tapping">Enable On Tapping</string>
+    <string name="enabled">Enabled</string>
+    <string name="enter_a_valid_number">Enter a valid number</string>
+    <string name="error">Error</string>
+    <string name="failed_to_save">Failed to save!</string>
+    <string name="file_header">File Header</string>
+    <string name="firmware_version">Firmware Version</string>
     <string name="gain">Gain</string>
     <string name="gauge_battery_level">%d%%</string>
     <string name="gauge_free_space">%dGB\nfree</string>
     <string name="gauge_gps_distance">%dm</string>
     <string name="gauge_gps_long_distance">&gt;100m</string>
+    <string name="general">General</string>
+    <string name="getting_mode">Getting mode…</string>
+    <string name="getting_node_name">Getting node name…</string>
+    <string name="getting_ranger_profile">Getting ranger profile…</string>
     <string name="go_back">Go back</string>
     <string name="gps_accuracy">GPS Accuracy</string>
     <string name="grid_id">Grid ID</string>
-    <string name="time_per_file">Time Per File</string>
-    <string name="important_delete_prompt"><u>IMPORTANT</u>\nThis operation is NOT reversible!</string>
-    <string name="less_than_one_minute"><![CDATA[< 1m]]></string>
-    <string name="microphone_type">Microphone Type</string>
-    <string name="misc">Misc</string>
-    <string name="model">Model</string>
-    <string name="none">(None)</string>
-    <string name="off">OFF</string>
-    <string name="on">ON</string>
     <string name="important">Important</string>
-    <string name="open_drawer_menu">Open drawer menu</string>
-    <string name="open_settings">Open settings</string>
-    <string name="permission_required">Permission required</string>
-    <string name="record_when_detected">Record When Detected</string>
-    <string name="recorder_settings">Recorder Settings</string>
-    <string name="recording">Recording</string>
-    <string name="sample_rate">Sample Rate</string>
-    <string name="scanner">Scanner</string>
-    <string name="session_id">Session ID</string>
-    <string name="start_detecting">Start\nDetecting</string>
-    <string name="start_recording">Start\nRecording</string>
-    <string name="stop_recording">Stop\nRecording</string>
-    <string name="stop_detecting">Stop\nDetecting</string>
-    <string name="status">Status</string>
-    <string name="storage">Storage</string>
-    <string name="yes">Yes</string>
-    <string name="firmware_version">Firmware Version</string>
-    <string name="app_version">App Version</string>
-    <string name="nothing_to_upload">Nothing to upload!</string>
-    <string name="sync_failed_check_internet_connection">Sync failed\nCheck internet connection</string>
-    <string name="check_internet_connection">Check internet connection!</string>
-    <string name="getting_ranger_profile">Getting ranger profile…</string>
-    <string name="not_available">Not available</string>
-    <string name="device_settings_not_available">Device settings are not available while it is recording or detecting.</string>
-    <string name="command_sent_successfully">Command sent successfully</string>
-    <string name="sd_card_error_message">Check the SD card and make sure it is inserted correctly.</string>
-    <string name="sd_card">SD Card</string>
-    <string name="confirm">Confirm</string>
-    <string name="wait55">Wait</string>
-    <string name="please_wait_for_gps_accuracy">Please wait for GPS accuracy to be less than 8m</string>
-    <string name="record_anyway">Record Anyway</string>
+    <string name="important_delete_prompt"><u>IMPORTANT</u>\nThis operation is NOT reversible!</string>
+    <string name="intruder">Intruder</string>
+    <string name="intruder_threshold">Intruder Threshold</string>
+    <string name="intruder_windows_ms">Intruder Windows MS</string>
+    <string name="invalid_setting">Invalid setting!</string>
     <string name="last_location">Last Location</string>
-    <string name="file_header">File Header</string>
-    <string name="battery_type">Battery Type</string>
-    <string name="battery_volt">Battery Volt</string>
-    <string name="more">More</string>
-    <string name="no_sd_card">No SD card</string>
-    <string name="upload_was_not_successful">Upload was not successful</string>
-    <string name="upload_was_completed_successfully">Upload was completed successfully</string>
-    <string name="status_upload">Status Upload</string>
-    <string name="user_interface">User Interface</string>
-    <string name="status_upload_intervals">Retry automatically uploading status at intervals of</string>
+    <string name="less_than_one_minute"><![CDATA[< 1m]]></string>
+    <string name="log_to_sd_card">Log To SD Card</string>
+    <string name="logs">Logs</string>
+    <string name="logs_filename">Log Filename</string>
+    <string name="logs_max_file_size">Max Log File Size</string>
+    <string name="logs_max_files">Max Log Files</string>
+    <string name="manual_command_info">You can manually send a command by entering it below and tapping on the send button.</string>
+    <string name="max_file_size">Max File Size</string>
+    <string name="max_files">Max Files</string>
+    <string name="max_frequency">Max Frequency</string>
+    <string name="maximum_cpu_frequency">Maximum CPU Frequency</string>
+    <string name="microphone_type">Microphone Type</string>
+    <string name="min_frequency">Min Frequency</string>
+    <string name="minimum_cpu_frequency">Minimum CPU Frequency</string>
+    <string name="minimum_value_error">Value must be at least %d</string>
+    <string name="mins_120">2 hrs</string>
     <string name="mins_15">15 mins</string>
     <string name="mins_30">30 mins</string>
     <string name="mins_60">1 hr</string>
-    <string name="mins_120">2 hrs</string>
-    <string name="checking_eloc_status_to_upload">Checking ELOC status to upload…</string>
-    <string name="eloc_status_uploaded">ELOC status was successfully uploaded</string>
-    <string name="upload_in_progress">An upload is already in progress</string>
-    <string name="retrying_in_time">Retrying in %s</string>
-    <string name="uploading_status">Uploading ELOC status…</string>
-    <string name="cancel">Cancel</string>
-    <string name="stopping_upload_service">Stopping upload service…</string>
-    <string name="offline">Offline</string>
-    <string name="device_offline">Failed to connect to server.\n\nPlease check your internet connection and make sure it is active.</string>
-    <string name="try_again">Try Again</string>
-    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
-    <string name="set_notifications_permission">Set Notifications permission</string>
-    <string name="no_google_accounts_found">No Google accounts found.</string>
-    <string name="log_to_sd_card">Log To SD Card</string>
-    <string name="arm_during_recording">Arm During Recording</string>
+    <string name="misc">Misc</string>
+    <string name="mode">Mode</string>
+    <string name="model">Model</string>
+    <string name="more">More</string>
     <string name="new_value_was_applied">New value was applied</string>
-    <string name="applying_changes">Applying changes…</string>
-    <string name="updating_values">Updating values…</string>
-    <string name="unknown">Unknown</string>
-    <string name="show_details">Show details</string>
-    <string name="type">Type</string>
-    <string name="channel">Channel</string>
-    <string name="use_apll">Use APLL</string>
-    <string name="use_timing_fix">Use Timing Fix</string>
-    <string name="editor">Editor</string>
-    <string name="text_editor_setting_name">Setting: %s</string>
-    <string name="failed_to_save">Failed to save!</string>
-    <string name="invalid_setting">Invalid setting!</string>
-    <string name="error">Error</string>
-    <string name="selection_required">You must make a selection!</string>
+    <string name="no_battery_mode">No Battery Mode</string>
+    <string name="no_google_accounts_found">No Google accounts found.</string>
+    <string name="no_sd_card">No SD card</string>
+    <string name="node_device_name">Node/Device Name</string>
+    <string name="node_name">Node Name</string>
+    <string name="none">(None)</string>
+    <string name="not_available">Not available</string>
+    <string name="nothing_to_upload">Nothing to upload!</string>
+    <string name="off">OFF</string>
+    <string name="offline">Offline</string>
+    <string name="on">ON</string>
+    <string name="open">Open</string>
+    <string name="open_drawer_menu">Open drawer menu</string>
+    <string name="open_settings">Open settings</string>
+    <string name="permission_required">Permission required</string>
+    <string name="please_wait_for_gps_accuracy">Please wait for GPS accuracy to be less than 8m</string>
+    <string name="record_anyway">Record Anyway</string>
+    <string name="record_when_detected">Record When Detected</string>
     <string name="recorder_channel">Recorder Channel</string>
     <string name="recorder_sample_rate">Recorder Sample Rate</string>
-    <string name="intruder">Intruder</string>
-    <string name="enabled">Enabled</string>
-    <string name="threshold">Threshold</string>
-    <string name="intruder_threshold">Intruder Threshold</string>
-    <string name="intruder_windows_ms">Intruder Windows MS</string>
-    <string name="enter_a_valid_number">Enter a valid number</string>
-    <string name="logs">Logs</string>
-    <string name="max_files">Max Files</string>
-    <string name="windows_ms">Windows MS</string>
-    <string name="max_file_size">Max File Size</string>
-    <string name="logs_filename">Log Filename</string>
-    <string name="logs_max_files">Max Log Files</string>
-    <string name="logs_max_file_size">Max Log File Size</string>
-    <string name="enable_at_start">Enable At Start</string>
-    <string name="enable_on_tapping">Enable On Tapping</string>
-    <string name="enable_during_recording">Enable During Recording</string>
-    <string name="bluetooth_timeout_off_seconds">Bluetooth Timeout Off Seconds</string>
-    <string name="minimum_value_error">Value must be at least %d</string>
-    <string name="cpu">CPU</string>
-    <string name="min_frequency">Min Frequency</string>
-    <string name="max_frequency">Max Frequency</string>
-    <string name="minimum_cpu_frequency">Minimum CPU Frequency</string>
-    <string name="maximum_cpu_frequency">Maximum CPU Frequency</string>
-    <string name="general">General</string>
-    <string name="node_name">Node Name</string>
+    <string name="recorder_settings">Recorder Settings</string>
+    <string name="recording">Recording</string>
+    <string name="retrying_in_time">Retrying in %s</string>
+    <string name="sample_rate">Sample Rate</string>
+    <string name="scanner">Scanner</string>
+    <string name="sd_card">SD Card</string>
+    <string name="sd_card_error_message">Check the SD card and make sure it is inserted correctly.</string>
     <string name="seconds_per_file">Seconds Per File</string>
-    <string name="node_device_name">Node/Device Name</string>
-    <string name="getting_node_name">Getting node name…</string>
-    <string name="mode">Mode</string>
-    <string name="getting_mode">Getting mode…</string>
+    <string name="select_mode">Select mode</string>
+    <string name="selection_required">You must make a selection!</string>
+    <string name="sending_command">Sending command…</string>
+    <string name="session_id">Session ID</string>
+    <string name="set_notifications_permission">Set Notifications permission</string>
     <string name="setting_mode">Setting mode…</string>
+    <string name="show_details">Show details</string>
+    <string name="start_detecting">Start\nDetecting</string>
+    <string name="start_recording">Start\nRecording</string>
     <string name="state_invalid">Invalid</string>
     <string name="state_noun_record_off_detect_off">Stop</string>
+    <string name="state_noun_record_off_detect_on">AI Detection</string>
     <string name="state_noun_record_on_detect_off">Record</string>
     <string name="state_noun_record_on_detect_on">Record with AI Detection</string>
-    <string name="state_noun_record_off_detect_on">AI Detection</string>
     <string name="state_noun_record_on_event">Record On Event (AI Detection)</string>
     <string name="state_verb_record_off_detect_off">Inactive</string>
+    <string name="state_verb_record_off_detect_on">AI Detection</string>
     <string name="state_verb_record_on_detect_off">Recording</string>
     <string name="state_verb_record_on_detect_on">Recording with AI Detection</string>
-    <string name="state_verb_record_off_detect_on">AI Detection</string>
     <string name="state_verb_record_on_event">Recording On Event</string>
-    <string name="select_mode">Select mode</string>
-    <string name="command_line">Command Line</string>
-    <string name="open">Open</string>
-    <string name="sending_command">Sending command…</string>
-    <string name="manual_command_info">You can manually send a command by entering it below and tapping on the send button.</string>
-    <string name="command_required">You must enter a command to send!</string>
-    <string name="clear">Clear</string>
-    <string name="confirm_clear_log">Are you sure you want to clear the log?</string>
+    <string name="status">Status</string>
+    <string name="status_upload">Status Upload</string>
+    <string name="status_upload_intervals">Retry automatically uploading status at intervals of</string>
+    <string name="stop_detecting">Stop\nDetecting</string>
+    <string name="stop_recording">Stop\nRecording</string>
+    <string name="stopping_upload_service">Stopping upload service…</string>
+    <string name="storage">Storage</string>
+    <string name="sync_failed_check_internet_connection">Sync failed\nCheck internet connection</string>
+    <string name="text_editor_setting_name">Setting: %s</string>
+    <string name="threshold">Threshold</string>
+    <string name="time_per_file">Time Per File</string>
+    <string name="try_again">Try Again</string>
+    <string name="type">Type</string>
+    <string name="unknown">Unknown</string>
+    <string name="update_interval">Update Interval</string>
+    <string name="updating_values">Updating values…</string>
+    <string name="upload_in_progress">An upload is already in progress</string>
+    <string name="upload_was_completed_successfully">Upload was completed successfully</string>
+    <string name="upload_was_not_successful">Upload was not successful</string>
+    <string name="uploading_status">Uploading ELOC status…</string>
+    <string name="use_apll">Use APLL</string>
+    <string name="use_timing_fix">Use Timing Fix</string>
+    <string name="user_action_required">User action required</string>
+    <string name="user_id">User ID:</string>
+    <string name="user_id_has_invalid_characters">User ID has invalid characters</string>
+    <string name="user_id_is_already_taken">User ID is already taken</string>
+    <string name="user_id_is_too_short">User ID is too short</string>
+    <string name="user_id_rules">User ID must\n* be at least 6 characters long\n* have only letters, digits, or underscores</string>
+    <string name="user_interface">User Interface</string>
+    <string name="verification_message">A verification link was sent to %s.\n\nYou must verify your email address to be able to use to your account.</string>
+    <string name="verify_password">Verify password</string>
+    <string name="version_template">Version: %s</string>
+    <string name="wait55">Wait</string>
+    <string name="windows_ms">Windows MS</string>
+    <string name="yes">Yes</string>
+    <string name="your_account_has_been_deleted">Your account has been deleted</string>
+    <!--    <string name="verification_rationale">Your email address is not yet verified.\n\nPlease click the link that was sent to your email address.\nIt may take a few minutes for the message to arrive. Remember to check you junk mail folder, if the message is not in your inbox.</string>-->
+    <!--    <string name="yes_permissions">yes, grant permissions</string>-->
+    <!--    <string name="yes_update_now">Yes, Update now</string>-->
 </resources>
