Fix for Google sign in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,8 @@
     <string name="windows_ms">Windows MS</string>
     <string name="yes">Yes</string>
     <string name="your_account_has_been_deleted">Your account has been deleted</string>
+    <string name="invalid_token_credential">Invalid token credential!</string>
+    <string name="invalid_credential_type">Invalid credential type!</string>
     <!--    <string name="verification_rationale">Your email address is not yet verified.\n\nPlease click the link that was sent to your email address.\nIt may take a few minutes for the message to arrive. Remember to check you junk mail folder, if the message is not in your inbox.</string>-->
     <!--    <string name="yes_permissions">yes, grant permissions</string>-->
     <!--    <string name="yes_update_now">Yes, Update now</string>-->
