--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,4 +197,8 @@
     <string name="ranger_profile_missing">Ranger profile missing</string>
     <string name="ranger_profile_missing_details">Failed to load the ranger profile.\nYou will be signed out now.</string>
     <string name="loading_ranger_profile">Loading ranger profile…</string>
+    <string name="skip_time_sync"><u>Skip time sync</u></string>
+    <string name="syncing_time">Syncing time… Please wait</string>
+    <string name="time_sync">Time Sync</string>
+    <string name="time_sync_rationale">The time for the ELOC may be incorrect.\n\nIf you need the time to be set correctly, please reconnect or manually synchronize the time.</string>
 </resources>
