Fix bluetooth pairing bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="battery">Battery</string>
     <string name="battery_average_interval">Battery Average Interval (Seconds)</string>
     <string name="battery_average_samples">Battery Average Samples</string>
+    <string name="battery_template">Battery: %.1fV</string>
     <string name="battery_type">Battery Type</string>
     <string name="battery_update_interval">Battery Update Interval (Seconds)</string>
     <string name="battery_volt">Battery Volt</string>
@@ -17,8 +18,8 @@
     <string name="camera_permission_rationale">%s needs permission to use the camera to take a photo.\nDo you want to grant the permission?</string>
     <string name="cancel">Cancel</string>
     <string name="channel">Channel</string>
-    <string name="no_internet_connection">No internet connection!</string>
     <string name="checking_eloc_status_to_upload">Checking ELOC status to upload…</string>
+    <string name="checking_internet_connection">Checking internet connection…</string>
     <string name="clear">Clear</string>
     <string name="command_line">Command Line</string>
     <string name="command_required">You must enter a command to send!</string>
@@ -32,7 +33,6 @@
     <string name="cpu">CPU</string>
     <string name="detected_events">Detected Events</string>
     <string name="detection_duration">Detection Duration</string>
-    <string name="recording_duration">Recording Duration</string>
     <string name="detector_settings">Detector Settings</string>
     <string name="device_address_required">Device address is required!</string>
     <string name="device_name_required">Device name is required!</string>
@@ -64,26 +64,30 @@
     <string name="go_back">Go back</string>
     <string name="gps_accuracy">GPS Accuracy</string>
     <string name="gps_accuracy_template">GPS Accuracy: %.1fm</string>
-    <string name="gps_location_template">GPS Location: (%f, %f)</string>
     <string name="gps_location_not_available">GPS Location: Not Available</string>
-    <string name="battery_template">Battery: %.1fV</string>
-    <string name="recording_time_template">Recording Time: %.1fh</string>
-    <string name="timestamp_template">Last Update: %s</string>
+    <string name="gps_location_template">GPS Location: (%f, %f)</string>
     <string name="grid_id">Grid ID</string>
     <string name="important">Important</string>
     <string name="important_delete_prompt"><u>IMPORTANT</u>\nThis operation is NOT reversible!</string>
     <string name="intruder">Intruder</string>
     <string name="intruder_threshold">Intruder Threshold</string>
     <string name="intruder_windows_ms">Intruder Windows MS</string>
+    <string name="invalid_credential_type">Invalid credential type!</string>
     <string name="invalid_setting">Invalid setting!</string>
+    <string name="invalid_token_credential">Invalid token credential!</string>
     <string name="last_location">Last Location</string>
     <string name="less_than_one_minute"><![CDATA[< 1m]]></string>
+    <string name="list_view">List View</string>
+    <string name="loading_ranger_profile">Loading ranger profile…</string>
+    <string name="location_required">Location Required</string>
     <string name="log_to_sd_card">Log To SD Card</string>
     <string name="logs">Logs</string>
     <string name="logs_filename">Log Filename</string>
     <string name="logs_max_file_size">Max Log File Size</string>
     <string name="logs_max_files">Max Log Files</string>
+    <string name="manage">Manage</string>
     <string name="manual_command_info">You can manually send a command by entering it below and tapping on the send button.</string>
+    <string name="map_view">Map View</string>
     <string name="max_file_size">Max File Size</string>
     <string name="max_files">Max Files</string>
     <string name="max_frequency">Max Frequency</string>
@@ -103,11 +107,15 @@
     <string name="new_value_was_applied">New value was applied</string>
     <string name="no_battery_mode">No Battery Mode</string>
     <string name="no_google_accounts_found">No Google accounts found.</string>
+    <string name="no_internet_connection">No internet connection!</string>
+    <string name="no_paired_devices_message">This app is not yet paired with any Bluetooth devices</string>
     <string name="no_sd_card">No SD card</string>
     <string name="node_device_name">Node/Device Name</string>
     <string name="node_name">Node Name</string>
     <string name="none">(None)</string>
     <string name="not_available">Not available</string>
+    <string name="not_detecting">Not Detecting</string>
+    <string name="not_recording">Not Recording</string>
     <string name="nothing_to_upload">Nothing to upload!</string>
     <string name="off">OFF</string>
     <string name="offline">Offline</string>
@@ -115,14 +123,20 @@
     <string name="open">Open</string>
     <string name="open_drawer_menu">Open drawer menu</string>
     <string name="open_settings">Open settings</string>
+    <string name="paired_devices">Paired devices</string>
     <string name="permission_required">Permission required</string>
     <string name="please_wait_for_gps_accuracy">Please wait for GPS accuracy to be less than 8m</string>
+    <string name="ranger_profile_missing">Ranger profile missing</string>
+    <string name="ranger_profile_missing_details">Failed to load the ranger profile.\nYou will be signed out now.</string>
     <string name="record_anyway">Record Anyway</string>
     <string name="record_when_detected">Record When Detected</string>
     <string name="recorder_channel">Recorder Channel</string>
     <string name="recorder_sample_rate">Recorder Sample Rate</string>
     <string name="recorder_settings">Recorder Settings</string>
     <string name="recording">Recording</string>
+    <string name="recording_duration">Recording Duration</string>
+    <string name="recording_time_template">Recording Time: %.1fh</string>
+    <string name="required">Required</string>
     <string name="retrying_in_time">Retrying in %s</string>
     <string name="sample_rate">Sample Rate</string>
     <string name="scanner">Scanner</string>
@@ -136,6 +150,7 @@
     <string name="set_notifications_permission">Set Notifications permission</string>
     <string name="setting_mode">Setting mode…</string>
     <string name="show_details">Show details</string>
+    <string name="skip_time_sync"><u>Skip time sync</u></string>
     <string name="start_detecting">Start\nDetecting</string>
     <string name="start_recording">Start\nRecording</string>
     <string name="state_invalid">Invalid</string>
@@ -157,13 +172,21 @@
     <string name="stopping_upload_service">Stopping upload service…</string>
     <string name="storage">Storage</string>
     <string name="sync_failed_check_internet_connection">Sync failed\nCheck internet connection</string>
+    <string name="syncing_time">Syncing time… Please wait</string>
+    <string name="system_settings">System settings</string>
     <string name="text_editor_setting_name">Setting: %s</string>
     <string name="threshold">Threshold</string>
     <string name="time_per_file">Time Per File</string>
+    <string name="time_sync">Time Sync</string>
+    <string name="time_sync_rationale">The time for the ELOC may be incorrect.\n\nIf you need the time to be set correctly, please reconnect or manually synchronize the time.</string>
+    <string name="timestamp_template">Last Update: %s</string>
     <string name="try_again">Try Again</string>
     <string name="type">Type</string>
     <string name="unknown">Unknown</string>
+    <string name="unpair_selected_devices">Unpair selected devices</string>
+    <string name="update_app">To upload records, you must update your app to the latest version.</string>
     <string name="update_interval">Update Interval</string>
+    <string name="update_now">Update Now</string>
     <string name="updating_values">Updating values…</string>
     <string name="upload_in_progress">An upload is already in progress</string>
     <string name="upload_was_completed_successfully">Upload was completed successfully</string>
@@ -182,25 +205,8 @@
     <string name="verify_password">Verify password</string>
     <string name="version_template">Version: %s</string>
     <string name="wait55">Wait</string>
+    <string name="wait_for_location">Please wait for a GPS location to be received.</string>
     <string name="windows_ms">Windows MS</string>
     <string name="yes">Yes</string>
     <string name="your_account_has_been_deleted">Your account has been deleted</string>
-    <string name="invalid_token_credential">Invalid token credential!</string>
-    <string name="invalid_credential_type">Invalid credential type!</string>
-    <string name="not_detecting">Not Detecting</string>
-    <string name="not_recording">Not Recording</string>
-    <string name="map_view">Map View</string>
-    <string name="list_view">List View</string>
-    <string name="checking_internet_connection">Checking internet connection…</string>
-    <string name="wait_for_location">Please wait for a GPS location to be received.</string>
-    <string name="location_required">Location Required</string>
-    <string name="ranger_profile_missing">Ranger profile missing</string>
-    <string name="ranger_profile_missing_details">Failed to load the ranger profile.\nYou will be signed out now.</string>
-    <string name="loading_ranger_profile">Loading ranger profile…</string>
-    <string name="skip_time_sync"><u>Skip time sync</u></string>
-    <string name="syncing_time">Syncing time… Please wait</string>
-    <string name="time_sync">Time Sync</string>
-    <string name="time_sync_rationale">The time for the ELOC may be incorrect.\n\nIf you need the time to be set correctly, please reconnect or manually synchronize the time.</string>
-    <string name="update_app">To upload records, you must update your app to the latest version.</string>
-    <string name="update_now">Update Now</string>
 </resources>
